worked around overflow issue of guide page

--- a/labyrinth/src/components/guide.module.css
+++ b/labyrinth/src/components/guide.module.css
@@ -2,10 +2,17 @@
     background-color: #fdda97;
     font-family: 'Coming Soon', cursive;
     text-align: center;
-    top: 0;
     padding-top: 2vh;
     padding-left: 3vw;
     padding-right: 3vw;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
 }
 
 .moveGuide {
