--- a/labyrinth/src/components/welcome.module.css
+++ b/labyrinth/src/components/welcome.module.css
@@ -8,6 +8,7 @@ body {
     height: 100%;
     background-attachment: fixed;
     background-size: cover;
+    overflow: hidden;
 }
 
 .container {
